--- a/week_01-html-css/code/shell/index.html
+++ b/week_01-html-css/code/shell/index.html
@@ -3,7 +3,11 @@
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
         <style>
-            
+            @media (max-width: 500px) {
+                #greenh {
+                    font-size: 24px;
+                }
+            }
         </style>
     </head>
     <body>
