--- a/projects/p1-personal-website/index.html
+++ b/projects/p1-personal-website/index.html
@@ -1,3 +1,94 @@
-<!-- We have purposely given you an empty file. We want you to get some practice with creating all the tags from the ground up.
- -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Michael Connelly</title>
+        <style>
 
+        #header {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: lightgrey;
+        }
+
+        #me {
+            transform: rotate(90deg);
+        }
+        
+        #nav {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            background-color: red;
+        }
+
+        #nav li {
+            display: inline;
+            align-content: center;
+            padding: 0px 10px 0px 10px;
+        }
+
+        .page-link {
+            color: white;
+            font-size: large;
+        }
+
+        #about-header {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        #about-text {
+            margin-top: 40px;
+            padding: 0px 20% 0px 20%;
+        }
+
+        @media(max-width: 500px) {
+
+            #nav {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            #nav li {
+                display: block;
+                padding: 5px 0px 5px 0px;
+            }
+        }
+
+        </style>
+    </head>
+    <body>
+        <div id="header">
+            <img id="me" src="./res/p1_pic.jpg" alt="picture of me" height="300" width="300">
+            <h1>
+                Michael Connelly
+            </h1>
+        </div>
+        <div id="nav">
+            <ol>
+                <li>
+                    <a class="page-link" href="./index.html">About</a>
+                </li>
+                <li>
+                    <a class="page-link" href="./resume.html">Resume</a class="page-link">
+                </li>
+                <li>
+                    <a class="page-link" href="./schedule.html">Schedule</a>
+                </li>
+            </ol>
+        </div>
+        <div id="about">
+            <div id="about-text">
+                <p>
+                    <b>Hi!</b> I'm Michael Connelly and this is my personal website. I am a junior <b>Computer Engineering</b> student at 
+                    The <b>University of Maryland</b>. I am making this website as a project for my class on web development. To view 
+                    my skills, experience, and contact details check out my <a href="./resume.html">resume</a>. And to check 
+                    out the other classes I am taking this semester click <a href="./schedule.html">here</a>.
+                </p>
+            </div>
+        </div>
+    </body>
+</html>
